Updated peers args (#139)
Also, I upgraded to the latest Gradle version (4.9).